# Battery-State-of-Health-and-Remaining-Useful-Life-Prediction

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: app.py  requirements.txt
notebooks/: eda_data_quality.ipynb
reports/: results.md
src/data/: parse_nasa.py  splits.py
src/eval/: report.py
src/features/: build_features.py
src/models/: derive_rul.py  train_soh.py
src/monitoring/: drift.py
tests/unit/: test_build_features.py  test_derive_rul.py  test_drift.py  test_parse_nasa.py  test_splits.py  test_train_soh.py
